--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
+            android:id="@+id/browseAddBtn"
             android:text="@string/browseAddBtnTxt"
             android:onClick="openRecipeList" />
     </LinearLayout>
