--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -42,7 +42,7 @@
 
             <Button
                 android:text="@string/editBtnTxt"
-                android:layout_width="76dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/editBtn"
                 android:layout_gravity="end"
