--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
             android:text="@string/searchBtnTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/searchBtn" />
+            android:id="@+id/searchBtn"
+            android:onClick="searchRecipesButtonAction" />
 
     </LinearLayout>
 
