recipe list initialization now happens in MainActivity...
    * The recipe list is initialized on the creation of MainActivity
    * Whenever the LibraryActivity is started, the recipe list
      is serialized and passed to it.
    * When the LibraryActivity back button is pressed, the recipe list
      is serialized and passed back to MainActivity
    * This is how preserving edits when going from RecipeActivity to
      LibraryActivity was done.
    * This modification allows edits to be preserved all the way
      back to the home screen

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,4 +10,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="uottawa.ca.cookhelper.SearchActivity">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/searchText"
+            android:hint="Enter a search query..." />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 </RelativeLayout>
