made good progress on SearchActivity...
    * currently, the SearchActivity ListView displays all recipes.
      this will change in the future to only show search results
    * otherwise, can now select a recipe in that list and display it
    * can also edit the recipe, and go all the way back to MainActivity
      with persistent state
    * hence, in all current functions, the state of any edited recipes
      is preserved

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,19 +13,28 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/searchText"
-            android:hint="Enter a search query..." />
+            android:hint="Enter a search query..."
+            android:layout_weight="1" />
+
+        <Button
+            android:text="@string/goSearchBtnTxt"
+            android:layout_width="match_parent"
+            android:id="@+id/goSearchBtn"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:id="@+id/searchResultsListView" />
     </LinearLayout>
 
 </RelativeLayout>
