added SearchEngine class
    * Will be responsible for performing searches
    * Finished Tokenizer portion

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -29,7 +29,8 @@
             android:layout_width="match_parent"
             android:id="@+id/goSearchBtn"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="searchButtonAction" />
 
         <ListView
             android:layout_width="match_parent"
