added about page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,8 @@
             android:text="@string/aboutBtnTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/aboutBtn" />
+            android:id="@+id/aboutBtn"
+            android:onClick="aboutButtonAction" />
 
     </LinearLayout>
 
