--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,27 +15,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/searchText"
-            android:hint="Enter a search query..."
-            android:layout_weight="1"
-            android:textSize="14sp" />
-
-        <Button
-            android:text="@string/goSearchBtnTxt"
-            android:layout_width="match_parent"
-            android:id="@+id/goSearchBtn"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:onClick="searchButtonAction" />
+            android:layout_weight="1">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/searchText"
+                android:hint="Enter a search query..."
+                android:layout_weight="1"
+                android:textSize="14sp"
+                android:singleLine="true" />
+
+            <Button
+                android:text="@string/goSearchBtnTxt"
+                android:layout_width="match_parent"
+                android:id="@+id/goSearchBtn"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="searchButtonAction" />
+        </LinearLayout>
 
         <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/searchResultsListView" />
     </LinearLayout>
 
