--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,16 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="uottawa.ca.cookhelper.SearchActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent" >
 
             <EditText
                 android:layout_width="match_parent"
@@ -31,6 +29,11 @@
                 android:layout_weight="1"
                 android:textSize="14sp"
                 android:singleLine="true" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
             <Button
                 android:text="@string/goSearchBtnTxt"
@@ -39,12 +42,19 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="searchButtonAction" />
-        </LinearLayout>
+        </TableRow>
 
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/searchResultsListView" />
-    </LinearLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/searchResultsListView"
+                android:layout_weight="1" />
+        </TableRow>
+
+    </TableLayout>
 
 </RelativeLayout>
